adds settings page

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,4 +1,10 @@
-$font-open-sans: "OpenSans", "Arial", sans-serif;
+$screen-xl: 1920px;
+$screen-lg: 1440px;
+$screen-ad: 1280px;
+$screen-md: 1024px;
+$screen-sm: 768px;
+$screen-xs: 360px;
+
 $white: #ffffff;
 $sapphire: #002b7e;
 $red-orange: #f2291f;
@@ -6,6 +12,11 @@ $dodger-blue: #0096f2;
 $midnight-express: #1d2335;
 $hawkes-blue: #d3dbe8;
 $malachite: #00c853;
+$raven: #677687;
+$white-smoke: #f2f2f2;
+$grey-chateau: #929aa3;
+$cerulean: #006da3;
 
+$font-open-sans: "OpenSans", "Arial", sans-serif;
 $base: 16;
 $base-font-size: $base * 1px;
