adaptive styles and some fixes

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,9 +1,7 @@
-$screen-xl: 1920px;
-$screen-lg: 1440px;
 $screen-ad: 1280px;
 $screen-md: 1024px;
 $screen-sm: 768px;
-$screen-xs: 360px;
+$screen-xs: 414px;
 
 $white: #ffffff;
 $sapphire: #002b7e;
@@ -18,4 +16,5 @@ $grey-chateau: #929aa3;
 $cerulean: #006da3;
 
 $font-open-sans: "OpenSans", "Arial", sans-serif;
+$font-verdana: "Verdana", "Arial", sans-serif;
 
