--- a/src/styles/_fonts.scss
+++ b/src/styles/_fonts.scss
@@ -1,19 +1,23 @@
-//$fonts: (('OpenSans', 'OpenSans-Regular', 400, normal));
-//
-//@mixin font-face($family, $file-name, $weight, $style) {
-//  @font-face {
-//    font-family: $family;
-//    src: url('../fonts/' + $file-name + '.eot');
-//    src: url('../fonts/' + $file-name + '.eot?#iefix') format('embedded-opentype'),
-//      url('../fonts/' + $file-name + '.ttf') format('truetype'),
-//      url('../fonts/' + $file-name + '.woff2') format('woff2'),
-//      url('../fonts/' + $file-name + '.woff') format('woff');
-//    font-weight: $weight;
-//    font-style: $style;
-//    font-display: swap;
-//  }
-//}
-//
-//@each $family, $file-name, $weight, $style in $fonts {
-//  @include font-face($family, $file-name, $weight, $style);
-//}
+@font-face {
+  font-family: 'OpenSans';
+  src: url('fonts/OpenSans-Regular.eot');
+  src: url('fonts/OpenSans-Regular.eot?#iefix') format('embedded-opentype'),
+    url('fonts/OpenSans-Regular.ttf') format('truetype'),
+    url('fonts/OpenSans-Regular.woff2') format('woff2'),
+    url('fonts/OpenSans-Regular.woff') format('woff');
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'OpenSans';
+  src: url('fonts/OpenSans-SemiBold.eot');
+  src: url('fonts/OpenSans-SemiBold.eot?#iefix') format('embedded-opentype'),
+  url('fonts/OpenSans-SemiBold.ttf') format('truetype'),
+  url('fonts/OpenSans-SemiBold.woff2') format('woff2'),
+  url('fonts/OpenSans-SemiBold.woff') format('woff');
+  font-weight: 600;
+  font-style: normal;
+  font-display: swap;
+}
