adds readme and some changes

--- a/src/styles/_functions.scss
+++ b/src/styles/_functions.scss
@@ -1,6 +1,7 @@
+@use "sass:math";
 $base: 16;
 $base-font-size: $base * 1px;
 
 @function base-unit($num) {
-  @return ($num / $base) * 1rem;
+  @return math.div($num, $base) * 1rem;
 }
